# smart_farm

./: CMakeLists.txt  main  main.cpp
tmp/: test1.avi
tool/: CMakeLists.txt
tool/include/: camera.hpp  crc.hpp  log.hpp  tcp.hpp  uart.hpp
tool/src/: crc.cpp  log.cpp  tcp.cpp  uart.cpp
